[gd_scene load_steps=4 format=3 uid="uid://dmws7vp1vil85"]

[ext_resource type="Script" path="res://components/componentScripts/town_segment_display.gd" id="1_xlu08"]
[ext_resource type="PackedScene" uid="uid://drugyfeqfmr65" path="res://components/multipart_bar_section.tscn" id="2_0805g"]
[ext_resource type="PackedScene" uid="uid://cbxj7rn12i6uf" path="res://components/town_segment.tscn" id="3_o210q"]

[node name="TownSegmentDisplay" type="Control"]
custom_minimum_size = Vector2(652, 40)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1230.0
offset_bottom = -1040.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xlu08")

[node name="MultipartName" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 690.0
offset_bottom = 24.0
mouse_filter = 1
theme_type_variation = &"LabelExplore"
bbcode_enabled = true
text = "<Name>"
fit_content = true

[node name="Segments" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 24.0
offset_right = 652.0
offset_bottom = 36.0
mouse_filter = 0
theme_override_constants/separation = 2

[node name="ProgressBar" type="ProgressBar" parent="Segments"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ProgressDex"
value = 100.0
fill_mode = 1
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="Segments"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ProgressCon"
value = 100.0
fill_mode = 1
show_percentage = false

[node name="ProgressBar3" type="ProgressBar" parent="Segments"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ProgressDex"
value = 100.0
fill_mode = 1
show_percentage = false

[node name="ProgressBar4" type="ProgressBar" parent="Segments"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ProgressCha"
value = 100.0
fill_mode = 1
show_percentage = false

[node name="ProgressBar5" type="ProgressBar" parent="Segments"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ProgressDex"
value = 100.0
fill_mode = 1
show_percentage = false

[node name="ProgressBar6" type="ProgressBar" parent="Segments"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ProgressStr"
value = 100.0
fill_mode = 1
show_percentage = false

[node name="ProgressBar7" type="ProgressBar" parent="Segments"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ProgressLuck"
value = 100.0
fill_mode = 1
show_percentage = false

[node name="MultipartBarSection" parent="Segments" instance=ExtResource("2_0805g")]
layout_mode = 2

[node name="TownSegment" parent="Segments" instance=ExtResource("3_o210q")]
layout_mode = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
